--- a/htdocs/css/main.css
+++ b/htdocs/css/main.css
@@ -22,3 +22,63 @@ body {
 .legal a:hover {
     text-decoration: underline;
 }
+
+.carousel {
+    width: 100%;
+    overflow: hidden;
+    position: relative;
+}
+
+.carousel--initialized .carousel__stage {
+    display: flex;
+    width: auto;
+    transition: transform 0.6s ease-in-out 0.2s;
+}
+
+.carousel__item {
+    width: 100%;
+    flex-shrink: 0;
+}
+
+.carousel__item img {
+    display: block;
+    width: 100%;
+    height: auto;
+}
+
+.carousel__nav {
+    position: absolute;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    top: 0;
+    width: 100%;
+    height: 100%;
+}
+
+.carousel__nav-prev,
+.carousel__nav-next {
+    text-indent: -99999px;
+    background: transparent url("../img/arrow.svg") 32px 48px;
+    border: 0;
+    outline: 0;
+    margin: 0 12px 0 0;
+    padding: 0;
+    width: 32px;
+    height: 48px;
+    cursor: pointer;
+    transition: transform 0.3s ease-in-out;
+}
+
+.carousel__nav-prev {
+    transform: rotate(180deg);
+    margin: 0 0 0 12px;
+}
+
+.carousel__nav-prev:hover {
+    transform: translateX(-8px) rotate(180deg);
+}
+
+.carousel__nav-next:hover {
+    transform: translateX(8px);
+}
